--- a/apps/articles-manager-api/package.json
+++ b/apps/articles-manager-api/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "posts-manager-api",
+  "name": "articles-manager-api",
   "version": "1.0.0",
   "main": "index.ts",
   "license": "MIT",
-  "private": true,
   "dependencies": {
-    "@types/node": "^20.11.25",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
-    "@wanago/logger": "*"
+    "express": "^4.18.3",
+    "@wanago.io/logger": "*"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.25"
   },
   "scripts": {
     "start": "ts-node ./index.ts"
