--- a/libraries/logger/package.json
+++ b/libraries/logger/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@wanago/logger",
+  "name": "@wanago.io/logger",
   "version": "1.0.0",
   "main": "index.ts",
-  "license": "MIT",
-  "private": true
+  "license": "MIT"
 }
